--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,18 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=5000
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASSWORD=rootpassword
+      - DB_NAME=mydatabase
     ports:
       - '5000:5000'
     volumes:
       - ./backend:/app
       - /app/node_modules
+    depends_on:
+      - mysql
     restart: always
 
   admin:
@@ -54,3 +61,20 @@ services:
       - admin
       - frontend
     restart: always
+
+  mysql:
+    image: mysql:8
+    container_name: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
