--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ PORT=5000
 DB_PORT=3306
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=*Thelastbrooks06*
-DB_NAME=linganoreumc
+DB_PASS=rootpassword
+DB_NAME=Linganore
 JWT_SECRET=secret
