--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"axios": "^1.8.1",
+		"@tailwindcss/vite": "^4.0.9",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.2.0"
 	},
 	"devDependencies": {
@@ -21,10 +22,12 @@
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"eslint": "^9.21.0",
-		"eslint-plugin-react": "^7.37.4",
-		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^15.15.0",
-		"vite": "^6.2.0"
+		"postcss": "^8.5.3",
+		"tailwindcss": "^4.0.9",
+		"vite": "^6.2.0",
+		"vite-plugin-svgr": "^4.3.0"
 	}
 }
