--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
 		"express-jwt-permissions": "^1.3.7",
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
-		"mysql2": "^3.12.0",
+		"mysql2": "^3.12.0"
+	},
+	"devDependencies": {
 		"nodemon": "^3.1.9"
 	}
 }
