Adds ability to cancel an EventDate and revises SQL Schema

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    client_max_body_size 20M;
+    # max upload size
+    client_max_body_size 50M;
 
     # API requests
     location /api/ {
