--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: Linganore
+      TZ: America/New_York
     ports:
       - '3306:3306'
     volumes:
