--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@hello-pangea/dnd": "^18.0.1",
 		"@tailwindcss/vite": "^4.0.9",
+		"axios": "^1.8.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
