--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ server {
     }
 
     # Admin Panel (Vite Dev Server)
+    # Previously used, let users avoid login demand
     location /admin/ {
         proxy_pass http://admin:5173/admin/;
         proxy_http_version 1.1;
