--- a/admin/package.json
+++ b/admin/package.json
@@ -11,7 +11,13 @@
 	},
 	"dependencies": {
 		"@hello-pangea/dnd": "^18.0.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.9",
+		"@tiptap/extension-image": "^2.11.7",
+		"@tiptap/extension-link": "^2.11.7",
+		"@tiptap/extension-underline": "^2.11.7",
+		"@tiptap/react": "^2.11.7",
+		"@tiptap/starter-kit": "^2.11.7",
 		"axios": "^1.8.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
