--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/vite": "^4.0.9",
 		"@tiptap/extension-image": "^2.11.7",
 		"@tiptap/extension-link": "^2.11.7",
+		"@tiptap/extension-text-align": "^2.11.7",
 		"@tiptap/extension-underline": "^2.11.7",
 		"@tiptap/react": "^2.11.7",
 		"@tiptap/starter-kit": "^2.11.7",
