Removes yt scrape from sermon, upcoming event is always future unless overridden

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,7 @@ DB_USER=root
 DB_PASS=rootpassword
 DB_NAME=Linganore
 JWT_SECRET=secret
+
+API_BASE_URL=https://api.linganoreumc.com
+ADMIN_BASE_URL=https://admin.linganoreumc.com
+BASE_URL=https://linganoreumc.com
